@@ -1,3 +1,10 @@
+Travel::Status::DE::IRIS 1.41 - Sun Dec 29 2019
+
+    * Result: Add "wing_of" accessor
+    * Follow name and DS100 change of Freiburg West (RFW) to
+      Freiburg-Landwasser (RFLW)
+    * Add more stations
+
 Travel::Status::DE::IRIS 1.40 - Tue Dec 25 2019
 
     * Incorporate the last few years' worth of station name changes
